fixing schedule table rendering issue sometimes on firefox

--- a/Web/css/schedule.css
+++ b/Web/css/schedule.css
@@ -51,20 +51,20 @@
 /* Generated by Paletton.com Â© 2002-2014 */
 /* http://paletton.com */
 .btn-primary {
-  background-color: #53577f;
+  background-color: #53577F;
   border-color: #2b2d41;
 }
 .btn-primary:hover,
 .btn-primary:active,
 .btn-primary:focus {
   background-color: #5d628e;
-  border-color: #53577f;
+  border-color: #53577F;
 }
 table.reservations {
   border-collapse: collapse;
   width: 100%;
   font-size: .85em;
-  table-layout: auto;
+  table-layout: fixed;
   border: solid #36648B 1px;
 }
 table.reservations.mobile {
@@ -204,7 +204,7 @@ td.dropped {
   background-color: #BDBDBD;
 }
 .restricted {
-  background: repeating-linear-gradient(45deg, transparent, transparent 10px, #cccccc 10px, #cccccc 20px), linear-gradient(to bottom, #eeeeee, #999999);
+  background: repeating-linear-gradient(45deg, transparent, transparent 10px, #ccc 10px, #ccc 20px), linear-gradient(to bottom, #eee, #999);
   color: black;
 }
 .schedule_title {
@@ -251,7 +251,7 @@ div.legend {
   padding: 0;
 }
 .reservations-left-header {
-  border-bottom: solid 1px #e9e9e9;
+  border-bottom: solid 1px #E9E9E9;
   font-weight: bold;
   font-size: 1.3em;
   text-align: center;
@@ -301,7 +301,7 @@ ul.jqtree-tree .jqtree-toggler {
 #reservations-left hr {
   border: 0;
   height: 1px;
-  background-color: #bcbcbc;
+  background-color: #BCBCBC;
 }
 #reservations-left .btn {
   width: 100%;
@@ -364,7 +364,7 @@ a.toggle-sidebar {
 .resource-display-available,
 .resource-display-unavailable,
 .resource-display-checkin {
-  background-color: #88cc88;
+  background-color: #88CC88;
   border: solid 1px #76c476;
   line-height: 70px;
   text-align: center;
@@ -378,7 +378,7 @@ a.toggle-sidebar {
   font-weight: bold;
 }
 .resource-display-unavailable {
-  background-color: #aa3939;
+  background-color: #AA3939;
   border: solid 1px #973333;
 }
 .resource-display-name,
@@ -389,7 +389,7 @@ a.toggle-sidebar {
 }
 .resource-display-date {
   text-align: right;
-  color: #bcbcbc;
+  color: #BCBCBC;
 }
 #page-resource-display-resource {
   margin-top: -40px;
